libs/extractor/src/snapshots/extractor__tests__styled_accepts_both_call_forms.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import { styled, Box } from '@devup-ui/react';\nconst twoArg = styled('div', { bg: 'red' });\nconst twoArgComponent = styled(Box, { mt: '1px' });\nconst curried = styled('span')({ color: 'blue' });\nconst member = styled.p({ pt: '2px' });\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "1px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-top",
                value: "2px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst twoArg = ({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...rest} as={forwardedAs} className={[\"a\", className].filter(Boolean).join(\" \")} style={style} />;\nconst twoArgComponent = ({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...rest} as={forwardedAs} className={[\"b\", className].filter(Boolean).join(\" \")} style={style} />;\nconst curried = ({ style, className, as: DevupAs = \"span\", forwardedAs, ...rest }) => <DevupAs {...rest} as={forwardedAs} className={[\"c\", className].filter(Boolean).join(\" \")} style={style} />;\nconst member = ({ style, className, as: DevupAs = \"p\", forwardedAs, ...rest }) => <DevupAs {...rest} as={forwardedAs} className={[\"d\", className].filter(Boolean).join(\" \")} style={style} />;\n",
}
